terraform/exercise1/secgroups.tf
resource "aws_security_group" "default" {
  name = "${var.prefix}-default-sg"
  description = "Allow SSH and HTTP in and everything out"
  vpc_id = "${var.vpc_id}"
  
  # SSH
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Everything
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
